@@ -5,7 +5,7 @@
     <title>Christmas 2008</title>
     <author>Jakub Pavlik /severus@post.cz/</author>
     <description>
-      Small Christmas gift for you.
+      Small Christmas present for you.
     </description>
   </info>
 
@@ -13,8 +13,8 @@
 
   <suite>
     <level>HolyHole</level>
-    <!-- <level>Climbin</level>
-	 <level>WisdomCave</level>
+    <level>Climbin</level>
+    <!-- <level>WisdomCave</level>
 	 <level>HappyLEnd</level> -->
   </suite>
 </levelsuite>
