@@ -6,9 +6,9 @@ require 'lock'
 require 'key'
 # require 'monsters/mobilephone'
 # require 'monsters/lift'
-require 'monsters/piranha'
-require 'monsters/boat'
-require 'monsters/cottage'
+require 'piranha'
+require 'boat'
+require 'cottage'
 require 'talk'
 require 'story'
 require 'ostruct'
